--- a/styles.css
+++ b/styles.css
@@ -104,24 +104,23 @@ nav {
  }
  
  .nav__link--anchor {
-    font-size: 20px;
+    font-size: 16px;
     color: #ffffff;
     font-weight: 700;
     cursor: not-allowed;
  }
  .nav__link--anchor2 {
-    font-size: 20px;
-    color: #ffffff;
+    font-size: 16px;
+    color: #fdeb99;
     font-weight: 700;
-    background-color: #4300fa;
+    background-color: #d79965;
     padding: 4px 6px;
     border-radius: 100px;
     translate: all 450ms ease;
  }
  .nav__link--anchor2:hover {
-    font-size: 20px;
-    color: #4300fa;
-    background-color: #ffffff;
+    color: #d79965;
+    background-color: #fdeb99;
  }
  
 
@@ -195,8 +194,7 @@ LANDING
     font-size: 24px;
     text-transform: uppercase;
     color: #d79965;
-    
-    text-shadow: 1px 1px 3px black;
+    text-shadow: 1px 1px 3px #d79965;
 }
 
 .search__container {
@@ -218,11 +216,9 @@ LANDING
     max-width: 500px;
     width: 90%;
     height: 50px;
-    /* box-shadow: 0 5px 20px #4300fa; */
     margin-top: 20px;
     font-size: 18px;
     color: black;
-    border: 2px solid black;
     translate:all 450ms ease;
 }
 
@@ -238,7 +234,7 @@ LANDING
 
 .input__btn {
     position: absolute;
-    background-color: #4300fa;
+    background-color: #d79965;
     color: white;
     border: none;
     height: 75%;
@@ -247,7 +243,7 @@ LANDING
     right: 9.5%;
     top: 12%;
     transition: all 300ms ease;
-    border: 1px solid #4300fa;
+    
     cursor: pointer;
 }
 
@@ -554,10 +550,23 @@ small phones and tablets
     .search__bar::placeholder {
         color: transparent;
     }
-    
+    .nav__link--anchor2 {
+        font-size: 14px;
+        color: #fdeb99;
+        font-weight: 700;
+        background-color: #d79965;
+        padding: 4px 6px;
+        border-radius: 50px;    
 }
+    .nav__link--anchor {
+        display: none;
+    }
 
+    .nav__link--list {
+        background-color: transparent;
+    }
 
+}
 
 
 
