--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,37 @@
     
 } 
 h1 {
+    text-align: center;
     margin-bottom: 16px;
+    color: white !important;
+    font-size: 80px;
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fdeb99, 0 0 40px #fdeb99, 0 0 50px #fdeb99, 0 0 60px #fdeb99, 0 0 70px #fdeb99;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #d79965, 0 0 40px #d79965, 0 0 50px #d79965, 0 0 60px #d79965, 0 0 70px #d79965, 0 0 80px #d79965;
+    }
+  }
+
+h3 {
+    line-height: 1.5 !important;
 }
 
 h3, 
 h1 {
-    color: #fff;
+    position: relative;
+    color: #242424;
     font-size: 28px;
     font-weight: 600;
-    text-align: center;
     line-height: 1;
-    text-shadow: 1px 1px 10px #4300fa;
+    /* text-shadow: 1px 1px 10px #d79965; */
 }
 
 a {
@@ -61,6 +81,13 @@ NAV
     background-position: center;
     height: 320px; /* You can use another unit like 'vh' for better responsiveness */
     z-index: 10000;
+}
+.nav-search__background-img2 {
+    background-image: url('assets/Movie-background.webp');
+    background-size: cover; /* or 'contain' depending on your preference */
+    background-position: center;
+    height: 12vh; /* You can use another unit like 'vh' for better responsiveness */
+    z-index: 0;
 }
 
 
@@ -266,7 +293,46 @@ LANDING
 MOVIE BOX STYLING
 
 */
+.movie__info--container {
+    display: flex;
+    justify-content: center;
+}
 
+.movie__img--wrapper {
+    position: relative;
+    max-width: 50%;
+    width: 100%;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+
+    text-align: center;
+    z-index: 1;
+    margin-top: 100px;
+}
+
+.movie__info--wrapper {
+    flex-direction: column;
+    max-width: 100%;
+    width: 40%;
+    margin-top: 150px;
+    margin-right: 200px;  
+}
+
+ 
+
+
+.description__img {
+    display: flex;
+    border: 1px solid #fdeb9941;
+    box-shadow: 0px 0px 10px black;
+}
+
+
+
+.movie__row {
+    z-index: 199;
+}
 .movie__wrapper {
     position: absolute;
     top: 300px; /* Adjust as needed */
@@ -335,7 +401,7 @@ img {
 
 .movie__info {
     margin-top: 30px;
-    color: black;
+    color: rgb(182, 176, 176);
     font-weight: bold;
     cursor: pointer !important;
     transition: all 450ms ease;
@@ -343,52 +409,32 @@ img {
 
 .movie__info:hover {
     transform: scale(1.5);
-    color: #4300fa;
+    color: #d79965;
 }
 
 .movie__info:active {
     transform: scale(.8);
 }
 
-.movie__img--wrapper {
-    font-size: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
 
 .movie__img--wrapper  img{
     width: 100%;
     max-width: 300px;
 }
 
-.movie__info--wrapper {
-    display: flex;
-    flex-direction: column;
-}
 
-.movie__info--wrapper h3{
-    line-height: 1.8;
-    font-weight: 200;
-}
 
 h2 {
+    position: relative;
     color: rgb(255, 255, 255);
     line-height: 1.3;
-    text-align: center;
-    margin: 0 200px;
+    text-align: left;
     font-size: 26px;
-    background-color: rgba(47, 0, 255, 0.356);
+    background-color: #d7986565;
     border-radius: 20px;
     padding: 4px;
-}
-
-.description__img {
-    display: flex;
-    border: 1px solid #4300fa;
-    box-shadow: 0px 0px 10px black;
+    max-width: 100%;
+    
 }
 
 .movie__title {
@@ -401,7 +447,7 @@ h2 {
     font-size: 16px;
     display: flex;
     transform: translateY(-50px);
-    background-color: #4300fa;
+    background-color: #d79965;
     color: white;
     border: none;
     height: 75%;
@@ -410,13 +456,15 @@ h2 {
     right: 9.5%;
     top: 12%;
     transition: all 300ms ease;
-    border: 1px solid #4300fa;
     cursor: pointer;
 }
 .show-more-button:hover {
-    filter: brightness(75%);
-    transform: scale(1.1);
+    filter: brightness(110%);
     transform: translateY(-50px);
+}
+
+.show-more-button:active {
+    transform: scale(.8);
 }
 
 
@@ -426,17 +474,21 @@ h2 {
 
 /* P AND P */
 
+#landing {
+    z-index: 0;
+}
+
 .shape {
-    position: sticky;
+    position: fixed;
     width: 50px;
     margin: none;
-    z-index: 0;
+
  }
 .shape2 {
-    position: sticky;
+    position: fixed;
     width: 35px;
     margin: none;
-    z-index: 0;
+
  }
  
  .shape--0 {
