--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ NAV
         left: 0;
         width: 100%;
         height: 20%;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(204, 203, 202, 0.966));
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(194, 194, 193));
 }
 .nav-search__background-img2 {
     position: relative;
@@ -206,7 +206,7 @@ LANDING
     transform: translateX(-50%);
     max-width: 600px;
     width: calc(100% - 32px); 
-    top: 10%;
+    top: 25%;
     background-color: rgba(0, 0, 0, 0.541);
     padding: 16px 0;
     border-radius: 20px;
